# pr-conflict-detector

./: .env-example  .gitignore  .pr-conflict-state.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  action.yml  auth.py  comment_rendering.py  conflict_detector.py  deduplication.py  env.py  fingerprint.py  issue_writer.py  json_writer.py  markdown_writer.py  pr_comment.py  pr_conflict_detector.py  pr_data.py  pyproject.toml  requirements-test.txt  requirements.txt  slack_notify.py  test_auth.py  test_conflict_detector.py  test_deduplication.py  test_deduplication_comparison.py  test_deduplication_fingerprint.py  test_deduplication_pruning.py  test_deduplication_state.py  test_env.py  test_env_get_bool.py  test_helpers.py  test_issue_writer.py  test_json_writer.py  test_markdown_writer.py  test_pr_comment.py  (+13 more)
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/chainguard/: update-uv-lock.sts.yaml
.github/linters/: .codespellrc  .markdown-lint.yml  .python-lint
.github/workflows/: auto-labeler.yml  codeql.yml  copilot-setup-steps.yml  docker-ci.yml  linter.yaml  mark-ready-when-ready.yml  pr-title.yml  python-ci.yml  release.yml  update-uv-lock.yml
