[project]
name = "pr-conflict-detector"
version = "1.0.0"
description = "Detect pull request conflicts and notify"
requires-python = ">=3.11"
dependencies = [
    "cryptography==46.0.5",
    "github3-py==4.0.1",
    "pyjwt==2.11.0",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "flake8==7.3.0",
    "mypy==1.19.1",
    "pylint==4.0.5",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "types-requests==2.32.4.20260107",
]
