[project]
name = "pr-conflict-detector"
version = "1.0.0"
description = "Detect pull request conflicts and notify"
requires-python = ">=3.11"
dependencies = [
    "cryptography==48.0.1",
    "github3-py==4.0.1",
    "pyjwt==2.13.0",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "flake8==7.3.0",
    "mypy==2.1.0",
    "pylint==4.0.5",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "types-requests==2.33.0.20260518",
]
